--- a/WaCollaborative/WaCollaborative.Frontend/Shared/NavMenu.razor
+++ b/WaCollaborative/WaCollaborative.Frontend/Shared/NavMenu.razor
@@ -14,12 +14,13 @@
                 <span class="oi oi-home" aria-hidden="true"></span> Home
             </NavLink>
         </div>
+        <AuthorizeView Roles="Planner,Collaborator">
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="/collaboration">
                 <span class="oi oi-loop-square" aria-hidden="true"></span> Colaboración
             </NavLink>
         </div>    
-        
+        </AuthorizeView>
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="/collaborationDemo">
                 <span class="oi oi-question-mark" aria-hidden="true"></span> Colaboración Demo
